# minions

./: .gitignore  .gitmodules  README.md
spooky/: .gitignore  Cargo.toml  README.md  debug_moves_cost.txt  debug_output.txt  debug_output2.txt  test_output.txt
spooky/.bsp/: sbt.json
spooky/benches/: eval_bench.rs  search_bench.rs
spooky/data/: test_config.fen  test_state.fen
spooky/docs/: README.md  architecture.md  attack.md  combat.md  design_sketch.md  fen.md  representation.md  rules.md  rules_detailed.md  rules_simplified.md  search.md  spawn.md  todo.md  umi.md
spooky/docs/heuristics/: README.md  eval.md  strategy.md
spooky/docs/stages/: attack.md  blotto.md  general.md  spawn.md
spooky/inputs/: turn.txt
spooky/matches/self_play-20250728-234033/: spooky_yellow-vs-spooky_blue-1.minions  spooky_yellow-vs-spooky_blue-2.minions
spooky/matches/self_play-20250818-235816/: spooky_yellow-vs-spooky_blue-1.minions  spooky_yellow-vs-spooky_blue-2.minions
spooky/minions/: Cargo.toml
spooky/minions/src/: main.rs
spooky/ratings/: elo_ratings.json
spooky/scrims/: ratings.py  run_scrim.py
spooky/scrims/configs/: default.toml  dev_scrim.toml  nodes1.toml  random_scrim.toml  self_play.toml  test_scrim.toml
spooky/scrims/results/: dev_scrim-20250714-234033.txt  dev_scrim-20250714-234521.txt
spooky/scripts/: archive_build.sh  run.sh  run_dev_scrim.sh  run_scrim.sh
spooky/src/: lib.rs  main.rs
spooky/src/ai/: attack.rs  attack_old.rs  blotto.rs  board.rs  board_node.rs  eval.rs  explore.rs  game.rs  game_node.rs  general.rs  general_node.rs  graphviz.rs  heuristic_search.rs  mcts.rs  mod.rs  reposition.rs  rng.rs  search.rs  spawn.rs  tests.rs
spooky/src/captain/: eval.rs  mod.rs  search.rs
spooky/src/core/: action.rs  bitboards.rs  blotto.rs  board.rs  convert.rs  display.rs  fen.rs  game.rs  loc.rs  map.rs  mod.rs  move_gen.rs  phase.rs  side.rs  spells.rs  tech.rs  units.rs  utils.rs
spooky/src/engine/: engine.rs  mod.rs  options.rs  search.rs
spooky/src/general/: blotto.rs  mcts.rs  mod.rs  resource.rs  search.rs  strategy.rs
spooky/src/heuristics/: mod.rs  traits.rs
spooky/src/nn/: mod.rs
spooky/src/uci/: command.rs  mod.rs  protocol.rs
spooky/src/umi/: command.rs  mod.rs  protocol.rs
spooky/tests/: random_heuristic.rs  umi.rs
(+84 files in other folders)
