[package]
name = "spooky"
version = "0.1.0"
edition = "2021"
authors = ["Ritam Nag"]
description = "Engine for the Minions board game"

[lib]
name = "spooky"
path = "src/lib.rs"

[[bin]]
name = "spooky"
path = "src/main.rs"

[dependencies]

[dev-dependencies]
criterion = "0.5"
test-case = "3.3"

[[bench]]
name = "search_bench"
harness = false

[[bench]]
name = "eval_bench"
harness = false
