[package]
name = "spooky"
version = "0.1.0"
edition = "2021"
authors = ["Ritam Nag"]
description = "Engine for the Minions board game"

[features]
profiling = []

[lib]
name = "spooky"
path = "src/lib.rs"

[[bin]]
name = "spooky"
path = "src/main.rs"

[dependencies]
num-traits = "0.2"
num-derive = "0.4"
anyhow = "1.0"
hashbag = "0.1.12"
enum_variant_type = "0.3.1"
lazy_static = "1.5.0"
indoc = "2.0.5"
colored = "2.0"
z3 = { version = "0.12.1", features = ["static-link-z3"] }
bumpalo = { version = "3.16.0", features = ["collections"] }
rand = "0.8.5"
lapjv = "0.1.0"
derive-where = "1.6.0"

[dev-dependencies]
pprof = { version = "0.15.0", features = ["criterion", "flamegraph"] }
assert_cmd = "2.0"
predicates = "3.1"
criterion = "0.5"
test-case = "3.3"
tempfile = "3.3.0"

[[bench]]
name = "search_bench"
harness = false

[[bench]]
name = "eval_bench"
harness = false
